#1096 fix mediaplayer initialization (missing background-image)