@@ -75,6 +75,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -151,6 +155,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -227,6 +235,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -299,6 +311,7 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
 											-XX:+UseZGC
 											-XX:+ZGenerational
 											-XX:+ExitOnOutOfMemoryError
